--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
   </head>
   <body>
     <form method="POST" action="http://www.google.com/search?">
-    <input type="q" name="login"> <br> <br>
+    <input type="text" name="login"> <br> <br>
     <input type="password" name="password"><br> <br>
     <input type="submit" name="submit">
+    
     </form>
+    <p> Please wait </p>
+
   </body>
 </html>
