changes has been made

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <input type="submit" name="submit">
     
     </form>
-    <p> Please wait </p>
+    <p>  i added something</p>
+
 
   </body>
 </html>
